# athora-faq

./: .env  README.md  pyproject.toml
src/: app.py
src/athora_faq/: __init__.py  generation.py  processing.py  retrieval.py  settings.py
